Fixed button alignment, optimized screen space with horizontal reset and remove buttons, fixed button text overflow, changed name field to unlimited text, fixed mobile select bug on manual reset option, added reset button to automatic reset buttons and changed style directly on css file.

--- a/static/styles/styles.css
+++ b/static/styles/styles.css
@@ -82,6 +82,11 @@ nav {
   border-radius: 5%;
 }
 
+.util-buttons {
+  padding: 0 auto;
+  margin-left: 7%;
+}
+
 .msg {
   color: white;
   background-color: black;
@@ -108,15 +113,45 @@ nav {
 }
 
 .button {
+  /*
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   position: relative;
+  overflow: hidden;
   width: 250px;
   height: 250px;
   margin: 10px;
+  z-index: 2;
+  border: 10px solid #222222;
+  border-radius: 50%;
+  outline: none !important;
+  -webkit-box-shadow: 0 8px #777;
+          box-shadow: 0 8px #777;
+  */
+  width: 250px;
+  height: 250px;
+  border-radius: 50%;
+  display: inline-block;
+  text-align: center;
+  margin: 5px;
+  overflow: hidden;
+
+  -ms-word-break: break-all;
+    word-break: break-all;
+
+ /* Non standard for webkit */
+     word-break: break-word;
+
+    -webkit-hyphens: auto;
+       -moz-hyphens: auto;
+        -ms-hyphens: auto;
+            hyphens: auto;
+  padding: 25px;
+  position: relative;
+
   z-index: 2;
   border: 10px solid #222222;
   border-radius: 50%;
@@ -138,18 +173,32 @@ nav {
 }
 
 .button h3 {
+  /*
   position: absolute;
+  transform:translate(-50%,-50%);
   color: black;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
-  top: 40%;
-  left: 20%;
-  right: 20%;
+  top: 50%;
+  left: 50%;
+  */
+  transform:translate(-50%,-50%);
+  position:absolute;
+  top:50%;
+  left:50%;
+  color: black;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+
 }
 
 .button-foot {
+  width: 250px;
   position: relative;
 }
+
 /*# sourceMappingURL=styles.css.map */
